Fix various issues to align better with wireframes

--- a/src/frontend/citizen-portal/src/app/shared/components/header/header.component.scss
+++ b/src/frontend/citizen-portal/src/app/shared/components/header/header.component.scss
@@ -6,6 +6,7 @@
 
 .mat-toolbar {
   height: 70px;
+  padding: 0;
 
   img {
     margin-top: -15px;
